# USGS-geoDOQ

./: AUTHORS  Makefile.in  README  README.md  bip2bil.cpp  config.h.in  configure  configure.in  doq2archdr.cpp  doq2geotiff.cpp  doq2geotiff.txt  doq2jpeg.cpp  doqutils.cpp  doqutils.h  format.txt  makenewhdr.cpp  outputfuncs.cpp  outputfuncs.h  spcsutils.cpp  spcsutils.h  testdoq.cpp  writeutils.cpp  writeutils.h
